# Feistal-Iot

./: README.md  cli.py  device_simulator.py  receiver.py
c_src/: CMakeLists.txt  README.md  feistel.c  feistel.h
feistel_cipher/: __init__.py  aead.py  feistel.py
tests/: test_feistel.py
